static/css/parts/ViewletQuickPick.css
/* TODO commit 9fcc3db9e37ec708459f3ba96715ca1286fc53b4 might be a bit faster
   for quickpick to open (3.3ms recalculcate style vs 4.2ms now)  */

/* TODO recalculate style is really slow in chrome for unknown reasons */
.QuickPick {
  position: absolute;
  width: 600px;
  top: 50px;
  left: 50%;
  margin-left: -300px; /* TODO maybe this should be 301px because of padding to be centered */
  padding: 0 1px 6px;
  background: var(--QuickPickBackground);
  color: var(--ListForeground);
  box-sizing: border-box;
  /* TODO is this useful? */
  contain: content;
  /* TODO is this useful? */
  /* transform: translate3d(0, 0, 0); */
  display: flex;
  flex-direction: column;
  pointer-events: all;
  /* inset: 0; */
  /* will-change: transform; */
  box-shadow: rgb(0 0 0 / 15%) 0px 0px 8px 2px;
}

.QuickPickHeader {
  display: flex;
  padding: 8px 6px 6px;
  height: 38px;
  contain: strict;
}

.QuickPickItems {
  outline: 0;
  margin: 0;
  padding: 0 5px;
  overflow: hidden;
  contain: strict;
  background: var(--QuickPickBackground);
}

.ScrollWrapper {
  width: 100%;
  height: 220px;
  /* TODO check if this makes a difference */
  /* will-change: transform; needed for effective scrolling */
  /* contain: strict; */
  position: relative;
  z-index: -1;
}

.Row {
}

.QuickPickItem {
  display: flex;
  white-space: nowrap;
  align-items: center;
  width: 100%;
  height: 22px;
  font-size: 13px;
  margin: 0;
  padding: 0 6px 0 11px;
  contain: strict;
  gap: 6px;
  line-height: 22px;
  border-radius: 3px;
}

.QuickPickItem:hover {
  background: var(--ListHoverBackground);
  color: var(--ListHoverForeground);
}

.QuickPickItemActive {
  /* TODO avoid using important */
  color: var(--ListActiveSelectionForeground) !important;
  background: var(--ListActiveSelectionBackground) !important;
}

/* TODO avoid nesting */
.QuickPickItemActive .QuickPickItemDescription {
  color: color-mix(in oklab, var(--ListActiveSelectionForeground), var(--ListActiveSelectionBackground) 30%);
}

.QuickPickItemDescription {
  font-size: 0.9em;
  pointer-events: none;
  contain: content;
  /* TODO compute mixed color in javascript once for effiency */
  color: color-mix(in oklab, var(--ListForeground), var(--QuickPickBackground) 30%);
}

/* TODO use aria annouce for this */
.QuickPickCount {
  /* Screen Reader Only */
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.QuickPickLabel {
  white-space: nowrap;
  contain: content;
  overflow: hidden;
  text-overflow: ellipsis;
  min-width: 0;
}

/* TODO reuse same highlight css for completions */
.QuickPickHighlight {
  color: var(--CompletionHighlightForeground, #e1b974);
  font-weight: 700;
  contain: content;
}

.QuickPickItem .Label {
  flex: initial;
}

